# arango-mcp-app

./: .gitmodules  LICENSE  README.md  README_Agent.md  app.py  app.yaml  databricks.yml  deploy_app.sh  pyproject.toml  requirements.txt  update_arango_agent_registry_uc.sh  update_genie_registry_uc.sh
.cursor/: mcp.json
.databricks/sync-snapshots/: d1381b3c6c743ef9.json
.github/workflows/: ci.yml
databricks-arango-mcp/: .gitignore  PRD.md  README.md  __init__.py  arango_connector.py  config.py  docker-compose.yml  gateway_arango_client.py  gateway_database.py  main.py  pyproject.toml  server.py
databricks-arango-mcp/.cursor/: mcp.json
databricks-arango-mcp/agents/: analyzer_management_agent.py  aql_execution_agent.py  backup_management_agent.py  cluster_management_agent.py  collection_management_agent.py  database_management_agent.py  document_crud_agent.py  graph_management_agent.py  graph_traversal_agent.py  index_management_agent.py  manual_management_agent.py  transaction_management_agent.py  user_management_agent.py  vector_search_agent.py  view_management_agent.py
databricks-arango-mcp/manuals/: cypher2aql.md
databricks-arango-mcp/mcp_tools/: __init__.py  analyzer_tools.py  aql_tools.py  backup_tools.py  cluster_tools.py  collection_tools.py  database_tools.py  document_tools.py  graph_tools.py  index_tools.py  manual_tools.py  transaction_tools.py  traversal_tools.py  user_tools.py  vector_tools.py  view_tools.py
resources/: arango_mcp.app.yml
scripts/: ensure_serving_endpoints.py  grant_deploy_user_app_can_use.py  probe_mcp_deployed.py  resolve_serving_endpoint_for_foundation_model.py
src/: app.py  asgi.py  provision_genie_uc.py  wsgi.py
src/aoe_ontoextract_mcp/: README.md  (+4 more)
tests/: conftest.py  test_agents.py  test_aql_utils.py  test_connectivity.py  test_database_manual_analyzer.py  test_databricks_app_http_auth.py  test_genie_code_llm_delegate.py  test_genie_code_tool_cap.py  test_genie_mcp_orchestrator.py  test_genie_mcp_tool_cap.py  test_mcp_http_surfaces.py  test_transactions.py  test_traversal.py  test_users.py  test_vector_search.py
(+111 files in other folders)
